[package]
name = "network-test-udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.4"
clap = { version = "^4.1", features = ["cargo", "suggestions"] }
chrono = "^0.4"
env_logger = "^0.10"
log = "^0.4"
nix = "^0.26"